# chatroom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
apps/: CMakeLists.txt
apps/client/: CMakeLists.txt  chatclient.cc  chatclient.h  chatclient.py  config.json  main.cc  main.cpp  main.py
apps/client/auxiliary-app/fatalbox/: main.py
apps/client/auxiliary-app/fatalbox/forms/: fatalbox.py
apps/client/auxiliary-app/fatalbox/res/ui/: fatalbox.ui  ui_fatalbox.py
apps/client/basic/: __init__.py  app_paths.py  config.py  const.py  message_id.py  packet.py
apps/client/core/basic/: config.py
apps/client/core/design/: singleton.py
apps/client/core/enum/: message_id.py
apps/client/core/message/: user_force_offline_pb2.py  user_login_ack_pb2.py  user_login_pb2.py  user_register_ack_pb2.py  user_register_pb2.py
apps/client/core/struct/: packet.py
apps/client/forms/: loginwin.py
apps/client/forms/ui/: loginwin.ui
apps/client/msgpb/: user_force_offline.pb.cc  user_force_offline.pb.h  user_login.pb.cc  user_login.pb.h  user_login_ack.pb.cc  user_login_ack.pb.h  user_register.pb.cc  user_register.pb.h  user_register_ack.pb.cc  user_register_ack.pb.h
apps/client/res/ui/: ui_loginwin.py
apps/client/service/: __init__.py  chatclient.py  chatservice.py  utils.cc  utils.h
apps/client/service/impl/: add_friend_panel.cc  create_group_panel.cc  join_group_panel.cc  login_panel.cc  register_panel.cc  remove_friend_panel.cc  remove_group_panel.cc  view_friends_panel.cc  view_groups_panel.cc  view_personal_info_panel.cc
apps/client/store/: __init__.py
apps/client/tools/: __init__.py  console.cc  console.h  filehelper.py  logger.py  pathhelper.py  result.py  tipbox.py
apps/client/utils/: file.py  screen.py
apps/common/core/: config.h  enums.h  msg_id.cc  msg_id.cpp  msg_id.h  noncopyable.h  packet.cc  packet.cpp  packet.h  singleton.h
apps/common/datapb/: friend_message_field.pb.cc  friend_message_field.pb.h  friend_messages.pb.cc  friend_messages.pb.h  friend_msgs_temp.pb.cc  friend_msgs_temp.pb.h  group_member.pb.cc  group_member.pb.h  group_message.pb.cc  group_message.pb.h  group_message_field.pb.cc  group_message_field.pb.h  group_messages.pb.cc  group_messages.pb.h
apps/common/msgpb/: add_friend.pb.cc  add_friend.pb.h  add_friend_ack.pb.cc  add_friend_ack.pb.h  add_group.pb.cc  add_group.pb.h  add_group_ack.pb.cc  add_group_ack.pb.h  create_group.pb.cc  create_group.pb.h  create_group_ack.pb.cc  create_group_ack.pb.h  friend_msg_temp.pb.cc  friend_msg_temp.pb.h  friend_msgs_temp.pb.cc  friend_msgs_temp.pb.h  get_friends.pb.cc  get_friends.pb.h  get_friends_ack.pb.cc  get_friends_ack.pb.h  get_group_info.pb.cc  get_group_info.pb.h  get_group_info_ack.pb.cc  get_group_info_ack.pb.h  get_joined_groups.pb.cc  get_joined_groups.pb.h  get_joined_groups_ack.pb.cc  get_joined_groups_ack.pb.h  get_msgs_from_friend.pb.cc  get_msgs_from_friend.pb.h  get_msgs_from_friend_ack.pb.cc  get_msgs_from_friend_ack.pb.h  get_msgs_from_group.pb.cc  get_msgs_from_group.pb.h  get_msgs_from_group_ack.pb.cc  get_msgs_from_group_ack.pb.h  join_group.pb.cc  join_group.pb.h  join_group_ack.pb.cc  join_group_ack.pb.h  (+48 more)
apps/common/tools/: converter.cc  converter.cpp  converter.h  format.h  net_util.cc  net_util.cpp  net_util.h
apps/include/public/core/: packet.h
apps/include/public/msgpb/: user_login.pb.h
apps/include/server/service/: chatservice.h  chatsession.h
apps/include/server/tools/: logger.h  sql_engine.h
apps/message/: compile-server.sh
apps/proto/: compile-server.sh
apps/server/: CMakeLists.txt  main.cpp
apps/server/include/: config.h
apps/server/include/basic/: message_id.h  packet.h
apps/server/include/service/: chatsession.h
apps/server/include/tools/: ioservice_pool.h
apps/server/model/: friends.cc  friends.h  friends_model.cc  friends_model.cpp  friends_model.h  group.cc  group.h  user.cc  user.h  user_model.cc  user_model.cpp  user_model.h
apps/server/msgpb/: user_force_offline.pb.cc  user_login.pb.cc  user_login_ack.pb.h  user_register_ack.pb.cc  user_register_ack.pb.h
apps/server/service/: chatserver.cc  chatserver.cpp  chatserver.h  chatservice.cc  chatservice.cpp  chatservice.h  chatsession.cc  chatsession.cpp  chatsession.h
apps/server/src/: CMakeLists.txt  cmake_install.cmake
apps/server/src/service/: chatservice.cpp  chatsession.cpp
apps/server/tools/: ioservice_pool.cc  ioservice_pool.cpp  ioservice_pool.h  logger.cc  logger.cpp  logger.h  mysql.cc  mysql.cpp  mysql.h  sql_engine.cpp  sql_engine.h
apps/src/: CMakeLists.txt
apps/src/client/: CMakeLists.txt  main.cpp
apps/src/server/: CMakeLists.txt  main.cpp
apps/src/server/model/: user_model.cpp
apps/src/server/service/: chatserver.cpp  chatservice.cpp
apps/src/server/tools/: ioservice_pool.cpp  mysql.cpp
include/: logger.h  public.h  utils.h
include/message/: emergency.pb.h  login.pb.h  login_ack.pb.h  register.pb.h  register_ack.pb.h
include/model/: User.pb.h
include/server/: basic.h  chatserver.h  chatservice.h  chatsession.h  ioservice_pool.h  logic_service.h  msgnode.h
include/tools/: converter.h  format.h  logger.h  packet.h  protobuf_utils.h  utils.h
proto/: User.proto  compile-client.bat  compile-server.sh  compile.sh  emergency.proto  login.proto  login_ack.proto  register.proto  register_ack.proto
proto/data/: friend_messages.proto  friend_msgs_temp.proto
proto/datapb/: friend_message_field.proto  group_member.proto  group_message.proto  group_message_field.proto  group_messages.proto
proto/message/: add_friend.proto  add_group.proto  add_group_ack.proto  create_group.proto  create_group_ack.proto  friend_msgs_temp.proto  get_friends.proto  login.proto  (+27 more)
src/: logger.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  chatsession.cpp  ioservice_pool.cpp  logic_service.cpp  main.cpp  msgnode.cpp
src/server/base/: ioservice_pool.cpp
src/server/model/: User.pb.cc  user_model.cpp
src/server/service/: chatsession.cpp
src/server/table/: User.pb.cc
src/server/tools/: logger.cpp
src/server/utils/: mysql.cpp
(+61 files in other folders)
